# CRUX

./: .clang-format  README.md  fragment.glsl  vertex.glsl
.CRUX/cmake/: CMakeLists.txt
.CRUX/scripts/: build_and_run.bat  clean_build.bat
header/assert/: crux_assert.h
header/file/: crux_file.h
header/glad/: crux_glad_wrap.h
header/sdl/: crux_sdl_wrap.h
header/shader/: crux_shader.h
header/sim/: sim_material.h  sim_pixel.h  sim_texture.h
header/threads/: sim_thread.h  tinycthread.h
header/vmap/: vmap.h
header/window/: crux_window.h
src/: main.c
src/file/: crux_file.c
src/glad/: crux_glad_wrap.c  glad.c
src/sdl/: crux_sdl_wrap.c
src/shader/: crux_shader.c
src/sim/: sim_material.c  sim_pixel.c  sim_texture.c
src/threads/: sim_thread.c  tinycthread.c
src/vmap/: vmap.c
src/window/: crux_window.c
